k8s/namespaces/staging1/keycloack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: staging1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: us-east1-docker.pkg.dev/prj-sqfaas-dev/sqfaas-dev/keycloak-v22:postgres
          command: ["/opt/keycloak/bin/kc.sh"]
          args: ["start", "--optimized", "--spi-theme-default=sinqia", "--hostname="]
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - mountPath: /opt/certs
              name: secrets-files
              readOnly: true
      volumes:
        - name: secrets-files
          secret:
            secretName: secrets-files
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
