k8s/namespaces/staging1/keycloack/v9-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-v9
  namespace: staging1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-v9
  template:
    metadata:
      labels:
        app: keycloak-v9
    spec:
      containers:
        - name: keycloak-v9
          image: us-east1-docker.pkg.dev/prj-sqfaas-dev/sqfaas-dev/keycloak-v9:1.0.15.1
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
          - mountPath: /opt/certs
            name: secrets-files
            readOnly: true
      volumes:
      - name: secrets-files
        secret:
          secretName: secrets-files
      hostAliases:
      - hostnames:
        - kc.staging1.sqfaas.in
        - bff.staging1.sqfaas.in
        - staging1.sqfaas.in
        - kc9.staging1.sqfaas.in
        - sqctrlportal.staging1.sqfaas.in
        - sqctrl.staging1.sqfaas.in
        ip: 10.140.133.172
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
