k8s/namespaces/staging1/keycloack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: staging1
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/configuration-snippet":"add_header X-Frame-Options \"ALLOW-FROM https://staging1.sqfaas.dev https://kc.staging1.sqfaas.dev\";\nadd_header Content-Security-Policy \"frame-ancestors 'self' https://kc.staging1.sqfaas.dev/ https://staging1.sqfaas.dev https://bff.staging1.sqfaas.dev;\" always;\n","nginx.ingress.kubernetes.io/cors-allow-credentials":"true","nginx.ingress.kubernetes.io/co [...]
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Frame-Options "ALLOW-FROM https://staging1.sqfaas.dev https://kc.staging1.sqfaas.dev";
      add_header Content-Security-Policy "frame-ancestors 'self' https://kc.staging1.sqfaas.dev/ https://staging1.sqfaas.dev https://bff.staging1.sqfaas.dev;" always;
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: Content-Type,Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, OPTIONS, PUT, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
    nginx.ingress.kubernetes.io/proxy-buffers: 4 512k
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: 512k
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx-private
  rules:
  - host: kc.staging1.sqfaas.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
  tls:
  - hosts:
    - kc.staging1.sqfaas.dev
    secretName: ingress-tls-new
